[package]
name = "lappi"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
lightning-invoice = "0.2.0"
bitcoin_hashes = "0.3.1"
secp256k1 = "0.12.2"
rand = "0.6.5"
lnd-rust = "0.4.0"
grpc = "0.6.1"
tls-api = "0.1.20"
sha2 = "0.8.0"
warp = "0.1.14"
url = "1.7.2"
serde = { version = "1", features = ["derive"] }
hex = "0.3.2"
serde_json = "1"
